# workshop

./: .gitignore  Makefile
lecture1/assembling/: main.cpp
lecture1/compilation/: names.cpp
lecture1/preprocessing/: cause.cpp  conditions.cpp  header1.hpp  header2.hpp  include.cpp  pragma.cpp  pragma.hpp  replace.cpp
lecture2/basics/: CMakeLists.txt  main.cpp  source.cpp  test.cpp
lecture2/basics/headers/: header.hpp  version.hpp.in
tasks1/assembling/: README.md  task
tasks1/compilation/: README.md  task.cpp
tasks1/preprocessing/: README.md  task.cpp  task1.hpp  task2.hpp
tasks2/basics/: README.md
tasks2/going_to_details/: README.md  main.cpp  msg.proto
